Add API forget a foreign exchange amount for a given currency converted to EUR on a particular day
