# src/main/java/com/crewmeister/cmcodingchallenge/currency/CurrencyController.java
@@ -61,5 +61,16 @@ public class CurrencyController {
                         .orElseThrow(() -> new RuntimeException("Can not find list of conversion rates")), HttpStatus.OK);
     }
 
+    @GetMapping("/conversion-rates/{currencyCode}/{date}")
+    @Operation(summary = "Get all EUR-FX conversion rates for given date .", description = "Get already persisted conversion rates for given day.")
+    @ApiResponses(value = {@ApiResponse(responseCode = "200", description = "Conversion rate found")})
+    public ResponseEntity<CurrencyConversionRateResponse> getConversionRatesByCurrencyAndDate(@PathVariable String currencyCode,@PathVariable String date) {
+
+        LocalDate inputDate=LocalDate.parse(date);
+        return
+                new ResponseEntity<>(currencyConversionRateService.getAvailableRatesByCurrencyAndDate(currencyCode,inputDate)
+                        .orElseThrow(() -> new RuntimeException("Can not find list of conversion rates")), HttpStatus.OK);
+    }
+
 
 }
